--- a/assets/css/post-layouts.css
+++ b/assets/css/post-layouts.css
@@ -333,7 +333,7 @@ div.category-section h2 {
 
 /* Post Meta Footer Container */
 .post-meta-footer {
-  margin-top: 40px;
+  margin-top: 32px;
   display: flex;
   flex-direction: column;
   gap: 16px;
@@ -432,14 +432,8 @@ div.category-section h2 {
 
 /* Related Posts Section */
 .related-posts {
-  margin-top: 60px;
-  padding: 40px 0;
-  border-top: 3px solid #c5641c;
-  background: linear-gradient(135deg, #2a2520 0%, #2a2826 50%, #1a1816 100%);
-  margin-left: -30px;
-  margin-right: -30px;
-  padding-left: 30px;
-  padding-right: 30px;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
 
 .related-posts h2 {
@@ -451,13 +445,6 @@ div.category-section h2 {
 
 /* Mobile Adjustments for Related Posts */
 @media (max-width: 768px) {
-  .related-posts {
-    margin-left: -16px;
-    margin-right: -16px;
-    padding-left: 16px;
-    padding-right: 16px;
-  }
-
   .related-posts h2 {
     font-size: 22px;
   }
